test/fail/enhanced-migration/enh-mig-test2/m1.mo
module {
    // Introduce field a.
    public func migration(_ : {}) : { a : Text } { { a = "bla bla" } };
};
